--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="section" id="home" data-label="Home">
       Home
       <header class="blog-conatiner">
+        <!-- Test -->
         <nav id="header-nav">
           <figure class="logo">
             <h2>Camels Blog</h2>
