--- a/index.html
+++ b/index.html
@@ -6,35 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/icofont.min.css" />
     <link rel="stylesheet" href="css/src/styles/basic.css" />
-    <link rel="stylesheet" href="./css/src/styles/form.css">
+    <link rel="stylesheet" href="./css/src/styles/form.css" />
     <title>Camels Paradise</title>
   </head>
   <body>
-    <div class="scroll-top">^</div>
-    <div class="section" id="home" data-label="Home">
-      Home
-      <header class="blog-conatiner">
-        <!-- Test -->
-        <nav id="header-nav">
-          <figure class="logo">
-            <h2>Camels Blog</h2>
-          </figure>
-          <!-- top nav menu -->
-          <nav id="menu">
-            <a href="#">Contact</a>
-            <a href="#">About</a>
-            <a href="#">Blog</a>
-          </nav>
-          <!-- mobile menu -->
-          <div class="mobile-menu">
-            <i class="icofont-navigation-menu"></i>
-          </div>
-        </nav>
-      </header>
+    <!-- Sticky Navbar -->
+    <div id="navbar">
+      <figure class="logo">
+        <h2>Camels Blog</h2>
+      </figure>
+      <nav id="menu">
+        <a href="#header" class="active">Home</a>
+        <a href="#blog">Blog</a>
+        <a href="#subscribe">Subscribe</a>
+        <a href="#contact">Contact</a>
+      </nav>
     </div>
 
     <!-- Hero section -->
-    <section class="hero">
+    <section id="header">
       <div class="left"></div>
       <div class="right">
         <div class="camel-box">
@@ -57,11 +47,10 @@
       <main>
         <section class="blog">
           <div class="section" id="top-10" data-label="Top 10">
-            Top 10
             <article class="blog-posts">
               <a href="blog.html">
                 <figure class="camels">
-                  <img 
+                  <img
                     src="css/src/images/shakira.jpeg"
                     alt="Beuaty Female Camel"
                   />
@@ -86,7 +75,10 @@
             <article class="blog-posts">
               <a href="blog.html">
                 <figure class="camels">
-                  <img src="css/src/images/shaqil.jpg" alt="Beuaty Female Camel" />
+                  <img
+                    src="css/src/images/shaqil.jpg"
+                    alt="Beuaty Female Camel"
+                  />
                   <figcaption><em>("Shaqil")</em></figcaption>
                 </figure>
                 <article class="blog-content">
@@ -132,7 +124,10 @@
             <article class="blog-posts">
               <a href="blog.html">
                 <figure class="camels">
-                  <img src="css/src/images/jhonny.jpeg" alt="Beuaty Female Camel" />
+                  <img
+                    src="css/src/images/jhonny.jpeg"
+                    alt="Beuaty Female Camel"
+                  />
                   <figcaption><em>("Jhonny")</em></figcaption>
                 </figure>
                 <article class="blog-content">
@@ -154,7 +149,10 @@
             <article class="blog-posts">
               <a href="blog.html">
                 <figure class="camels">
-                  <img src="css/src/images/george.jpeg" alt="Beuaty Female Camel" />
+                  <img
+                    src="css/src/images/george.jpeg"
+                    alt="Beuaty Female Camel"
+                  />
                   <figcaption><em>("George")</em></figcaption>
                 </figure>
                 <article class="blog-content">
@@ -174,7 +172,10 @@
             <article class="blog-posts">
               <a href="blog.html">
                 <figure class="camels">
-                  <img src="css/src/images/atef.jpeg" alt="Beuaty Female Camel" />
+                  <img
+                    src="css/src/images/atef.jpeg"
+                    alt="Beuaty Female Camel"
+                  />
                   <figcaption><em>("Usman")</em></figcaption>
                 </figure>
                 <article class="blog-content">
@@ -192,48 +193,56 @@
             </article>
           </section>
 
-          <div class="section" id="top-20" data-label="Top 20">
-            Top 20
-            <article class="blog-posts">
-              <a href="blog.html">
-                <figure class="camels">
-                  <img src="css/src/images/george.jpeg" alt="Beuaty Female Camel" />
-                  <figcaption><em>("George")</em></figcaption>
-                </figure>
-                <article class="blog-content">
-                  <span>Arabic Camel - 17/5/1996</span>
-                  <h3>Top 10 Arabic Camels</h3>
-                  <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Recusandae nihil illum id et odio in, repellat reiciendis.
-                    Quos, pariatur. Alias ullam debitis tempore provident, dolor
-                    dolores facere iusto? Sint, incidunt.
-                  </p>
-                  <a href="">Read More</a>
-                </article>
-              </a>
-            </article>
+          <section id="blog">
+            <div class="section" id="top-20" data-label="Top 20">
+              Top 20
+              <article class="blog-posts">
+                <a href="blog.html">
+                  <figure class="camels">
+                    <img
+                      src="css/src/images/george.jpeg"
+                      alt="Beuaty Female Camel"
+                    />
+                    <figcaption><em>("George")</em></figcaption>
+                  </figure>
+                  <article class="blog-content">
+                    <span>Arabic Camel - 17/5/1996</span>
+                    <h3>Top 10 Arabic Camels</h3>
+                    <p>
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                      Recusandae nihil illum id et odio in, repellat reiciendis.
+                      Quos, pariatur. Alias ullam debitis tempore provident,
+                      dolor dolores facere iusto? Sint, incidunt.
+                    </p>
+                    <a href="">Read More</a>
+                  </article>
+                </a>
+              </article>
 
-            <article class="blog-posts">
-              <a href="blog.html">
-                <figure class="camels">
-                  <img src="css/src/images/atef.jpeg" alt="Beuaty Female Camel" />
-                  <figcaption><em>("Usman")</em></figcaption>
-                </figure>
-                <article class="blog-content">
-                  <span>Arabic Camel - 17/5/1996</span>
-                  <h3>Top 10 Arabic Camels</h3>
-                  <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Recusandae nihil illum id et odio in, repellat reiciendis.
-                    Quos, pariatur. Alias ullam debitis tempore provident, dolor
-                    dolores facere iusto? Sint, incidunt.
-                  </p>
-                  <a href="">Read More</a>
-                </article>
-              </a>
-            </article>
-          </div>
+              <article class="blog-posts">
+                <a href="blog.html">
+                  <figure class="camels">
+                    <img
+                      src="css/src/images/atef.jpeg"
+                      alt="Beuaty Female Camel"
+                    />
+                    <figcaption><em>("Usman")</em></figcaption>
+                  </figure>
+                  <article class="blog-content">
+                    <span>Arabic Camel - 17/5/1996</span>
+                    <h3>Top 10 Arabic Camels</h3>
+                    <p>
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                      Recusandae nihil illum id et odio in, repellat reiciendis.
+                      Quos, pariatur. Alias ullam debitis tempore provident,
+                      dolor dolores facere iusto? Sint, incidunt.
+                    </p>
+                    <a href="">Read More</a>
+                  </article>
+                </a>
+              </article>
+            </div>
+          </section>
           <nav class="pagination">
             <a href="#">&laquo;</a>
             <a href="" class="active"><button>1</button></a>
@@ -351,31 +360,26 @@
     </div>
 
     <!-- This is subscription form container -->
-    <div class="form-container">
-
+    <section class="form-container" id="subscribe">
       <h3>Subscribe Here!</h3>
 
       <form action="" method="get">
-
         <!-- This is name input -->
         <div class="input-wrapper">
-            <label for="name"><h4>Enter your name:</h4></label>
-            <input type="text" id="name" placeholder="Your Name" required>
+          <label for="name"><h4>Enter your name:</h4></label>
+          <input type="text" id="name" placeholder="Your Name" required />
         </div>
         <!-- This is email input -->
         <div class="input-wrapper">
-            <label for="email"><h4>Enter your email:</h4></label>
-            <input type="email" id="email" placeholder="Your email" required>
+          <label for="email"><h4>Enter your email:</h4></label>
+          <input type="email" id="email" placeholder="Your email" required />
         </div>
         <!-- This is subscribe input/button -->
         <div id="subscribe">
-          <input type="submit" value="Subscribe!">
+          <input type="submit" value="Subscribe!" />
         </div>
-        
       </form>
-    </div>
-
-    
+    </section>
 
     <footer>
       <div class="section" id="contact" data-label="Contact Us">
