--- a/index.html
+++ b/index.html
@@ -15,16 +15,18 @@
       <figure class="logo">
         <h2>Camels Blog</h2>
       </figure>
+
       <nav id="menu">
-        <a href="#header" class="active">Home</a>
-        <a href="#blog">Blog</a>
-        <a href="#subscribe">Subscribe</a>
-        <a href="#contact">Contact</a>
+        <ul id="menu-list"></ul>
+        <!-- <a href="#header" class="active">Home</a>
+             <a href="#blog">Blog</a>
+             <a href="#subscribe">Subscribe</a>
+             <a href="#contact">Contact</a> -->
       </nav>
     </div>
 
     <!-- Hero section -->
-    <section id="header">
+    <section id="header" class="menu-links">
       <div class="left"></div>
       <div class="right">
         <div class="camel-box">
@@ -45,8 +47,8 @@
 
     <div class="blog-container">
       <main>
-        <section class="blog">
-          <div class="section" id="top-10" data-label="Top 10">
+        <div class="blog">
+          <div class="" id="top-10" data-label="Top 10">
             <article class="blog-posts">
               <a href="blog.html">
                 <figure class="camels">
@@ -193,7 +195,7 @@
             </article>
           </section>
 
-          <section id="blog">
+          <section id="blog" class="menu-links">
             <div class="section" id="top-20" data-label="Top 20">
               Top 20
               <article class="blog-posts">
@@ -251,15 +253,15 @@
             <a href=""><button>4</button></a>
             <a href="#">&raquo;</a>
           </nav>
-        </section>
+        </div>
 
         <aside>
-          <section>
+          <div>
             <article class="categories">
               <header>
                 <h3>Categories</h3>
               </header>
-              <section class="wrapper">
+              <div class="wrapper">
                 <figure class="thumb">
                   <img src="css/src/images/atef.jpeg" alt="" />
                 </figure>
@@ -272,9 +274,9 @@
                   </p>
                   <a href="">6 Comments</a>
                 </article>
-              </section>
+              </div>
 
-              <section class="wrapper">
+              <div class="wrapper">
                 <figure class="thumb">
                   <img src="css/src/images/atef.jpeg" alt="" />
                 </figure>
@@ -287,9 +289,9 @@
                   </p>
                   <a href="">6 Comments</a>
                 </article>
-              </section>
+              </div>
 
-              <section class="wrapper">
+              <div class="wrapper">
                 <figure class="thumb">
                   <img src="css/src/images/atef.jpeg" alt="" />
                 </figure>
@@ -302,14 +304,14 @@
                   </p>
                   <a href="">6 Comments</a>
                 </article>
-              </section>
+              </div>
             </article>
 
             <article class="recent-posts">
               <header>
                 <h3>Recents Posts</h3>
               </header>
-              <section class="wrapper">
+              <div class="wrapper">
                 <figure class="thumb">
                   <img src="css/src/images/atef.jpeg" alt="" />
                 </figure>
@@ -322,9 +324,9 @@
                   </p>
                   <a href="">6 Comments</a>
                 </article>
-              </section>
+              </div>
 
-              <section class="wrapper">
+              <div class="wrapper">
                 <figure class="thumb">
                   <img src="css/src/images/atef.jpeg" alt="" />
                 </figure>
@@ -337,9 +339,9 @@
                   </p>
                   <a href="">6 Comments</a>
                 </article>
-              </section>
+              </div>
 
-              <section class="wrapper">
+              <div class="wrapper">
                 <figure class="thumb">
                   <img src="css/src/images/atef.jpeg" alt="" />
                 </figure>
@@ -352,15 +354,15 @@
                   </p>
                   <a href="">6 Comments</a>
                 </article>
-              </section>
+              </div>
             </article>
-          </section>
+          </div>
         </aside>
       </main>
     </div>
 
     <!-- This is subscription form container -->
-    <section class="form-container" id="subscribe">
+    <section class="form-container menu-links" id="subscribe">
       <h3>Subscribe Here!</h3>
 
       <form action="" method="get">
@@ -382,7 +384,7 @@
     </section>
 
     <footer>
-      <div class="section" id="contact" data-label="Contact Us">
+      <section class="menu-links" id="contact" data-label="Contact Us">
         Contact Us
         <article class="footer-top">
           <div class="left">
@@ -435,7 +437,7 @@
             <i class="icofont-linkedin"></i>
           </div>
         </article>
-      </div>
+      </section>
     </footer>
 
     <script src="./js/app.js"></script>
