--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
     <section class="form-container menu-links" id="subscribe">
       <h3>Subscribe Here!</h3>
 
-      <form action="" method="get">
+      <form class="form" action="" method="get">
         <!-- This is name input -->
         <div class="input-wrapper">
           <label for="name"><h4>Enter your name:</h4></label>
