changed the links

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/icofont.min.css" />
-    <link rel="stylesheet" href="css/src/styles/basic.css" />
+    <link rel="stylesheet" href="./css/icofont/icofont.min.css" />
+    <link rel="stylesheet" href="./css/src/styles/basic.css" />
     <link rel="stylesheet" href="./css/src/styles/form.css" />
     <title>Camels Paradise</title>
   </head>
@@ -53,7 +53,7 @@
               <a href="blog.html">
                 <figure class="camels">
                   <img
-                    src="css/src/images/shakira.jpeg"
+                    src="./css/src/images/shakira.jpeg"
                     alt="Beuaty Female Camel"
                   />
                   <figcaption><em>("Shakira")</em></figcaption>
@@ -78,7 +78,7 @@
               <a href="blog.html">
                 <figure class="camels">
                   <img
-                    src="css/src/images/shaqil.jpg"
+                    src="./css/src/images/shaqil.jpg"
                     alt="Beuaty Female Camel"
                   />
                   <figcaption><em>("Shaqil")</em></figcaption>
@@ -104,7 +104,7 @@
               <a href="blog.html">
                 <figure class="camels">
                   <img
-                    src="css/src/images/margarita.jpeg"
+                    src="./css/src/images/margarita.jpeg"
                     alt="Beuaty Female Camel"
                   />
                   <figcaption><em>("Margarita")</em></figcaption>
@@ -127,7 +127,7 @@
               <a href="blog.html">
                 <figure class="camels">
                   <img
-                    src="css/src/images/jhonny.jpeg"
+                    src="./css/src/images/jhonny.jpeg"
                     alt="Beuaty Female Camel"
                   />
                   <figcaption><em>("Jhonny")</em></figcaption>
@@ -152,7 +152,7 @@
               <a href="blog.html">
                 <figure class="camels">
                   <img
-                    src="css/src/images/george.jpeg"
+                    src="./css/src/images/george.jpeg"
                     alt="Beuaty Female Camel"
                   />
                   <figcaption><em>("George")</em></figcaption>
@@ -175,7 +175,7 @@
               <a href="blog.html">
                 <figure class="camels">
                   <img
-                    src="css/src/images/atef.jpeg"
+                    src="./css/src/images/atef.jpeg"
                     alt="Beuaty Female Camel"
                   />
                   <figcaption><em>("Usman")</em></figcaption>
@@ -202,7 +202,7 @@
                 <a href="blog.html">
                   <figure class="camels">
                     <img
-                      src="css/src/images/george.jpeg"
+                      src="./css/src/images/george.jpeg"
                       alt="Beuaty Female Camel"
                     />
                     <figcaption><em>("George")</em></figcaption>
@@ -225,7 +225,7 @@
                 <a href="blog.html">
                   <figure class="camels">
                     <img
-                      src="css/src/images/atef.jpeg"
+                      src="./css/src/images/atef.jpeg"
                       alt="Beuaty Female Camel"
                     />
                     <figcaption><em>("Usman")</em></figcaption>
@@ -263,7 +263,7 @@
               </header>
               <div class="wrapper">
                 <figure class="thumb">
-                  <img src="css/src/images/atef.jpeg" alt="" />
+                  <img src="./css/src/images/atef.jpeg" alt="" />
                 </figure>
                 <article class="content">
                   <span>Lorem - 30/1/1976</span>
@@ -278,7 +278,7 @@
 
               <div class="wrapper">
                 <figure class="thumb">
-                  <img src="css/src/images/atef.jpeg" alt="" />
+                  <img src="./css/src/images/atef.jpeg" alt="" />
                 </figure>
                 <article class="content">
                   <span>Lorem - 30/1/1976</span>
@@ -293,7 +293,7 @@
 
               <div class="wrapper">
                 <figure class="thumb">
-                  <img src="css/src/images/atef.jpeg" alt="" />
+                  <img src="./css/src/images/atef.jpeg" alt="" />
                 </figure>
                 <article class="content">
                   <span>Lorem - 30/1/1976</span>
@@ -313,7 +313,7 @@
               </header>
               <div class="wrapper">
                 <figure class="thumb">
-                  <img src="css/src/images/atef.jpeg" alt="" />
+                  <img src="./css/src/images/atef.jpeg" alt="" />
                 </figure>
                 <article class="content">
                   <span>Lorem - 30/1/1976</span>
@@ -328,7 +328,7 @@
 
               <div class="wrapper">
                 <figure class="thumb">
-                  <img src="css/src/images/atef.jpeg" alt="" />
+                  <img src="./css/src/images/atef.jpeg" alt="" />
                 </figure>
                 <article class="content">
                   <span>Lorem - 30/1/1976</span>
@@ -343,7 +343,7 @@
 
               <div class="wrapper">
                 <figure class="thumb">
-                  <img src="css/src/images/atef.jpeg" alt="" />
+                  <img src="./css/src/images/atef.jpeg" alt="" />
                 </figure>
                 <article class="content">
                   <span>Lorem - 30/1/1976</span>
